@@ -272,8 +272,9 @@ extern void continue_enabling_breakpoint(pid_t pid, Breakpoint * sbp);
 extern long gimme_arg(enum tof type, Process * proc, int arg_num, arg_type_info * info);
 extern void save_register_args(enum tof type, Process * proc);
 extern int umovestr(Process * proc, void * addr, int len, void * laddr);
-extern int umovelong (Process * proc, void * addr, long * result, arg_type_info * info);
-extern size_t umovebytes (Process *proc, void * addr, void * laddr, size_t count);
+extern int umovelong(Process * proc, void * addr, long * result, arg_type_info * info);
+extern size_t umovebytes(Process *proc, void * addr, void * laddr, size_t count);
+extern size_t ustorebytes(Process *proc, void * addr, void * laddr, size_t count);
 extern int ffcheck(void * maddr);
 extern void * sym2addr(Process *, struct library_symbol *);
 extern int linkmap_init(Process *, struct ltelf *);
