@@ -1,5 +1,9 @@
 2011-08-07  Petr Machata  <pmachata@redhat.com>
 
+	* common.h, sysdeps/linux-gnu/trace.c (ustorebytes): New function.
+
+2011-08-07  Petr Machata  <pmachata@redhat.com>
+
 	* common.h (enum symtype): New type
 	(struct library_symbol): New field of that type.
 	(add_library_symbol): Returns newly-added symbol.
